# semirings-types

./: default.nix  result  semirings-types.cabal  shell.nix
