name:          semirings-types
category:      Algebra, Data, Data Structures, Math, Maths, Mathematics
version:       0.1.0
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        chessai
maintainer:    chessai <chessai1996@gmail.com>
stability:     provisional
homepage:      http://github.com/chessai/semirings-types
bug-reports:   http://github.com/chessai/semirings-types/issues
copyright:     Copyright (C) 2018 chessai
synopsis:      some useful semirings
description:
    This library exposes some useful semirings that aim to be generally applicable to a wide array of problems. 
build-type:    Simple
extra-source-files: README.md CHANGELOG.md
tested-with:   GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.1

source-repository head
  type: git
  location: git://github.com/chessai/semirings.git

flag deepseq
  description:
    You can disable the use of the `deepseq` package using `-f-deepseq`.
    .
    Disabling this may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

flag vector
  description:
    You can disable the use of the `vector` package using `-f-vector`.
    .
    Disabling this may be useful for accelerating builds in sandboxes for expert users.
    default: True
    manual: True

library
  default-language: Haskell98
  ghc-options: -Wall

  build-depends:
      base >= 2 && < 5
    , semirings 
  
  if impl(ghc >= 7.2)
    exposed-modules:
      Data.Semiring.Fib 
      Data.Semiring.Poly 
  if impl(ghc >= 8.0.1)
    exposed-modules:
      Data.Semiring.Matrix
      Data.Semiring.Numeric
    
    if impl(ghc >= 8.0.1)
      build-depends: coerce-util

    if flag(deepseq)
      build-depends: deepseq >= 1.1 && < 1.5

    if flag(vector)
      build-depends: vector >= 0.7 && < 0.13.0.0
